--- a/source/pages/giftcardshiyong/giftcardshiyong.wxml
+++ b/source/pages/giftcardshiyong/giftcardshiyong.wxml
@@ -5,13 +5,15 @@
     </view>
     <view wx:else style="margin-bottom: 92rpx; ">
         <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="chosedz" id='{{item.id}}' wx:if="{{item.isuse != 'C'  && item.yue != 0}}">
-            <image class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
+            <image wx:if="{{item.cardtype=='A'}}" class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item.cardcover_image}}"></image>
+            <image wx:else class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item .cover}}"></image>
             <view class="contentbox flex-1">
-                <view wx:if="{{item.cardtype == 'B'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id}}</view>
-                <view wx:if="{{item.cardtype == 'A'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
+                <view wx:if="{{item.cardtype == 'B'}}" class="f-32" style="font-weight: 700;">面值￥{{item.shiwukaprice}}</view>
+                <view wx:if="{{item.cardtype == 'A'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_cardprice}}</view>
                 <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
                     <view class="f-24">余额：{{item.yue}}</view>
-                    <view class="f-24">{{item.isuse_name}}</view>
+                    <view class="f-24" wx:if="{{item.isuse=='E'}}">未使用</view>
+                    <view wx:else class="f-24">{{item.isuse_name}}</view>
                 </view>
                 <view class="f-20 explain">有效期三年</view>
             </view>
