--- a/source/pages/giftcards/giftcards.wxml
+++ b/source/pages/giftcards/giftcards.wxml
@@ -15,7 +15,7 @@
         <view wx:else style="margin-bottom: 92rpx; ">
             
             <view class="flex-row cards" wx:for="{{cardlist}}" wx:key="item" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo?id={{item.id}}">
-                <image wx:if="{{item.cardtype == 'A'}}" class="cardsimg" src="{{uploadpath}}giftcardinfo/{{coverbanner[item.giftcardinfo_id].image}}"></image>
+                <image wx:if="{{item.cardtype == 'A'}}" class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item.cardcover_image}}"></image>
                 <image wx:if="{{item.cardtype == 'B'}}" class="cardsimg" src="{{uploadpath}}giftcardinfo/{{item.cover}}"></image>
                 <view class="contentbox flex-1">
                     <view wx:if="{{item.cardtype == 'A'}}" class="f-32" style="font-weight: 700;">面值￥{{item.giftcardprice_id_name}}</view>
@@ -45,7 +45,7 @@
         <view class="flex-row flex-column" style=" background: rgba(255, 255, 255, 1); min-height:90vh; width: 100vw;">
             <view style="width: 645rpx;">
                 <view style="margin-bottom: 180rpx;">
-                    <input id="{{}}" style="margin-top: 56rpx;" bindinput="bindKeyInput" class="inputbox" type="number" placeholder="请输入卡号" value="" />
+                    <input id="{{}}" style="margin-top: 56rpx;" bindinput="bindKeyInput" class="inputbox" type="text" placeholder="请输入卡号" value="" />
                     <input id="{{}}" bindinput="bindPawInput" class="inputbox" type="text" password placeholder="请输入卡密" value="" />
                     <view class="text">兑换须知</view>
                     <view style="margin-bottom: 40rpx;">instinfo</view>
