--- a/source/pages/mypingjia/mypingjia.wxss
+++ b/source/pages/mypingjia/mypingjia.wxss
@@ -1,7 +1,6 @@
 /* pages/mypingjia/mypingjia.wxss */
 .pingjiabox {
     width: 700rpx;
-    height: 220rpx;
     background: #FFFFFF;
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.08);
     border-radius: 12px;
@@ -32,4 +31,11 @@
     color: #666666;
     line-height: 40rpx;
     text-shadow: 0px 0px 18rpx rgba(0, 0, 0, 0.08);
+}
+.pjimg {
+    width: 200rpx;
+    height: 200rpx;
+    background: #D8D8D8;
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.08);
+    border-radius: 8px;
 }
