--- a/source/pages/my/my.wxml
+++ b/source/pages/my/my.wxml
@@ -36,23 +36,37 @@
 
     <view class="mybox">
         <view class="height-90"></view>
-        <view class="flex-row flex-center orderbox">
-            <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/orderlist/orderlist?type=A">
-                <image src="{{uploadpath}}resource/{{res.orderA}}" mode="widthFix" class="ordericon"></image>
-                <view class="txt-66 h6">待付款</view>
+        <view class="orderbox">
+            <view class="flex-row flex-center quanbu">
+                <view class="f32 txt-33">我的订单</view>
+                <view class="flex-1"></view>
+                <view class="flex-row flex-center" bindtap="navigateto" id="/pages/orderlist/orderlist">
+                    <view class="f-24 txt-99">全部</view>
+                    <view class="width-8"></view>
+                    <image src="{{uploadpath}}resource/{{res.orderall}}" mode="widthFix" class="icon-5"></image>
+                </view>
+
             </view>
-            <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/orderlist/orderlist?type=B">
-                <image src="{{uploadpath}}resource/{{res.orderB}}" mode="widthFix" class="ordericon"></image>
-                <view class="txt-66 h6">待发货</view>
+
+            <view class="flex-row flex-center">
+                <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/orderlist/orderlist?type=A">
+                    <image src="{{uploadpath}}resource/{{res.orderA}}" mode="widthFix" class="ordericon"></image>
+                    <view class="txt-66 h6">待付款</view>
+                </view>
+                <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/orderlist/orderlist?type=B">
+                    <image src="{{uploadpath}}resource/{{res.orderB}}" mode="widthFix" class="ordericon"></image>
+                    <view class="txt-66 h6">待发货</view>
+                </view>
+                <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/orderlist/orderlist?type=C">
+                    <image src="{{uploadpath}}resource/{{res.orderC}}" mode="widthFix" class="ordericon"></image>
+                    <view class="txt-66 h6">待收货</view>
+                </view>
+                <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/refundlist/refundlist">
+                    <image src="{{uploadpath}}resource/{{res.orderT}}" mode="widthFix" class="ordericon"></image>
+                    <view class="txt-66 h6">待取货</view>
+                </view>
             </view>
-            <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/orderlist/orderlist?type=C">
-                <image src="{{uploadpath}}resource/{{res.orderC}}" mode="widthFix" class="ordericon"></image>
-                <view class="txt-66 h6">待收货</view>
-            </view>
-            <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/refundlist/refundlist">
-                <image src="{{uploadpath}}resource/{{res.orderT}}" mode="widthFix" class="ordericon"></image>
-                <view class="txt-66 h6">待取货</view>
-            </view>
+
         </view>
 
         <view class="lipin" bindtap="navigateto" id="/pages/giftcards/giftcards">
@@ -84,14 +98,14 @@
                     <image src="{{uploadpath}}resource/{{res.jifenshangcheng}}" class="icon"></image>
                     <view class="h7 txt-66 margin-top-20">积分商城</view>
                 </view>
-                <view class="flex-1 flex-row flex-column" bindtap="phonecall">
-                    <image src="{{uploadpath}}resource/{{res.kefubangzhu}}" class="icon"></image>
-                    <view class="h7 txt-66 margin-top-20">客服帮助</view>
-                </view>
                 <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/addresslist/addresslist">
                     <image src="{{uploadpath}}resource/{{res.dizhiguanli}}" class="icon"></image>
                     <view class="h7 txt-66 margin-top-20">地址管理</view>
                 </view>
+                <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/myactivity/myactivity?type=A">
+                    <image src="{{uploadpath}}resource/{{res.activity}}" class="icon"></image>
+                    <view class="h7 txt-66 margin-top-20">我的活动</view>
+                </view>               
                 <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/mycoupon/mycoupon?type=A">
                     <image src="{{uploadpath}}resource/{{res.youhuiquan}}" class="icon"></image>
                     <view class="h7 txt-66 margin-top-20">优惠券</view>
@@ -104,18 +118,18 @@
                     <image src="{{uploadpath}}resource/{{res.wodepinjia}}" class="icon"></image>
                     <view class="h7 txt-66 margin-top-20">我的评价</view>
                 </view>
-                <view class="flex-1 flex-row flex-column" bindtap="notdata">
-                    <image src="{{uploadpath}}resource/{{res.shezhi}}" class="icon"></image>
-                    <view class="h7 txt-66 margin-top-20">设置</view>
-                </view>
-                <view class="flex-1 flex-row flex-column" bindtap="navigateto" id="/pages/myactivity/myactivity?type=A">
-                    <image src="{{uploadpath}}resource/{{res.activity}}" class="icon"></image>
-                    <view class="h7 txt-66 margin-top-20">我的活动</view>
-                </view>
-                <button style="border: 0;padding: 0;margin: 0;" class="flex-1 flex-row flex-column" bindtap="sharefenxiao"  open-type="share" plain="true">
+                <button style="border: 0;padding: 0;margin: 0;" class="flex-1 flex-row flex-column" bindtap="sharefenxiao" open-type="share" plain="true">
                     <image src="{{uploadpath}}resource/{{res.fenxiao}}" class="icon"></image>
-                    <view class="h7 txt-66 margin-top-20" style="line-height: 30rpx;">分销</view>
+                    <view class="h7 txt-66 margin-top-20" style="line-height: 30rpx;">转发分享</view>
                 </button>
+                <view class="flex-1 flex-row flex-column" bindtap="phonecall">
+                    <image src="{{uploadpath}}resource/{{res.kefubangzhu}}" class="icon"></image>
+                    <view class="h7 txt-66 margin-top-20">联系客服</view>
+                </view>
+                <view class="flex-1 flex-row flex-column">
+                    <!-- <image src="{{uploadpath}}resource/{{res.shezhi}}" class="icon"></image>
+                    <view class="h7 txt-66 margin-top-20">设置</view> -->
+                </view>
             </view>
 
         </view>
