--- a/source/pages/giftcardshousongjilu/giftcardshousongjilu.wxml
+++ b/source/pages/giftcardshousongjilu/giftcardshousongjilu.wxml
@@ -14,19 +14,20 @@
         <view wx:else>
             <view wx:for="{{shoudaojilu}}" style="width: 700rpx;background: #FFFFFF;border-radius: 32rpx;margin-top: 20rpx;">
                 <view style=" margin: 32rpx;">
-                    <view wx:if="{{item.mygiftcard_cardtype==A}}" class="flex-row flex-center" style="border-bottom: 2rpx solid rgba(204, 204, 204, 1); padding-bottom: 32rpx;">
-                        <image src=" {{uploadpath}}giftcardinfo/{{item.cover}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
+                    <view wx:if="{{item.mygiftcard_cardtype=='A'}}" class="flex-row flex-center" style="border-bottom: 2rpx solid rgba(204, 204, 204, 1); padding-bottom: 32rpx;">
+                        <image src=" {{uploadpath}}giftcardinfo/{{item.image}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
                         <view style="margin-left: 16rpx;">
-                            <view class="v1">面值￥{{item.giftcardprice_cardprice}}</view>
+                            <view class="v1">面值￥{{item.cardprice}}</view>
                             <view class="v2">卡号：{{item.mygiftcard_buynum}}</view>
                             <view class="v2">收到时间：{{item.mygiftcard_receivetime}}</view>
                         </view>
                     </view>
+
                     <view wx:else class="flex-row flex-center" style="border-bottom: 2rpx solid rgba(204, 204, 204, 1); padding-bottom: 32rpx;">
                         <image src=" {{uploadpath}}giftcardinfo/{{item.mygiftcard_cover}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
                         <view style="margin-left: 16rpx;">
                             <view class="v1">面值￥{{item.mygiftcard_shiwukaprice}}</view>
-                            <view class="v2">卡号：{{item.buynum}}</view>
+                            <view class="v2">卡号：{{item.name}}</view>
                             <view class="v2">收到时间：{{item.mygiftcard_receivetime}}</view>
                         </view>
                     </view>
@@ -44,26 +45,27 @@
         </view>
         <view wx:else>
             <view wx:for="{{zengsongjilu}}" style="width: 700rpx;background: #FFFFFF;border-radius: 32rpx;margin-top: 20rpx;">
-            <view style=" margin: 32rpx;">
-                <view wx:if="{{item.mygiftcard_cardtype==A}}" class="flex-row flex-center" style="border-bottom: 2rpx solid rgba(204, 204, 204, 1); padding-bottom: 32rpx;">
-                        <image src=" {{uploadpath}}giftcardinfo/{{item.cover}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
+                <view style=" margin: 32rpx;">
+                    <view wx:if="{{item.mygiftcard_cardtype=='A'}}" class="flex-row flex-center" style="border-bottom: 2rpx solid rgba(204, 204, 204, 1); padding-bottom: 32rpx;">
+                        <image src=" {{uploadpath}}giftcardinfo/{{item.image}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
                         <view style="margin-left: 16rpx;">
-                            <view class="v1">面值￥{{item.giftcardprice_cardprice}}</view>
+                            <view class="v1">面值￥{{item.cardprice}}</view>
                             <view class="v2">卡号：{{item.mygiftcard_buynum}}</view>
                             <view class="v2">收到时间：{{item.mygiftcard_receivetime}}</view>
                         </view>
                     </view>
+
                     <view wx:else class="flex-row flex-center" style="border-bottom: 2rpx solid rgba(204, 204, 204, 1); padding-bottom: 32rpx;">
                         <image src=" {{uploadpath}}giftcardinfo/{{item.mygiftcard_cover}}" style="width: 236rpx;height: 140rpx;border-radius: 12rpx;background: #CECECE;"></image>
                         <view style="margin-left: 16rpx;">
                             <view class="v1">面值￥{{item.mygiftcard_shiwukaprice}}</view>
-                            <view class="v2">卡号：{{item.buynum}}</view>
+                            <view class="v2">卡号：{{item.name}}</view>
                             <view class="v2">收到时间：{{item.mygiftcard_receivetime}}</view>
                         </view>
                     </view>
                     <view class="height-24"></view>
-                    <view class="haoyou">来自好友：{{item.u_member_id_name}}</view>
-            </view>
+                    <view class="haoyou">赠送好友：{{item.member_nickName}}</view>
+                </view>
         </view>
         </view>
        
