--- a/source/pages/my/my.wxss
+++ b/source/pages/my/my.wxss
@@ -66,6 +66,12 @@
     z-index: 10;
     position: relative;
 }
+.quanbu{
+    margin: 0 18rpx 24rpx 28rpx;
+}
+.width-8{
+    width: 8rpx;
+}
 .ordericon {
     width: 72rpx;
     height: 60rpx;
@@ -77,7 +83,7 @@
     background: #ffffff;
     box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
     border-radius: 20rpx;
-    padding: 64rpx 0 42rpx;
+    padding: 24rpx 0 42rpx;
 }
 
 .lipin {
