--- a/source/app.wxss
+++ b/source/app.wxss
@@ -227,6 +227,9 @@ textarea {
 .txt-weight {
   font-weight: 500;
 }
+.txt-weight-500 {
+  font-weight: 500;
+}
 
 .nowrap {
   word-break: keep-all;
